--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
 </head>
 
 <body>
-
+    <div class="hero">
+        <div class="hero-top">
+            <h2 class="header-logo">
+                Header Logo
+            </h2>
+            <div>
+                <a class="header-link" href="">Header link two</a>
+                <a class="header-link" href="">Header link one</a>
+                <a class="header-link" href="">Header link three</a>
+            </div>
+        </div>
+        <div class="hero-bottom">
+            <div id="hero-container">
+                <h1 class="header-title">This Website is Awesome!</h1>
+                <p class="header-subtext">Some example webpage subtext under the title.</p>
+                <button class="header-button">Sign Up</button>
+            </div>
+            <img class="hero-image" src="" alt="Hero Image">
+        </div>
+    </div>
 </body>
 
 </html>
