--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="hero">
         <div class="hero-top">
-            <h2 class="header-logo">
+            <h3 class="header-logo">
                 Header Logo
-            </h2>
+            </h3>
             <div>
                 <a class="header-link" href="">Header link two</a>
                 <a class="header-link" href="">Header link one</a>
@@ -28,6 +28,10 @@
             <img class="hero-image" src="" alt="Hero Image">
         </div>
     </div>
+    <!-- <div>Content</div>
+    <div>Quote</div>
+    <div>Sign Up</div>
+    <div>Footer</div> -->
 </body>
 
 </html>
