Add info section

--- a/index.html
+++ b/index.html
@@ -28,10 +28,27 @@
             <img class="hero-image" src="" alt="Hero Image">
         </div>
     </div>
-    <!-- <div>Content</div>
-    <div>Quote</div>
-    <div>Sign Up</div>
-    <div>Footer</div> -->
+    <div class="info">
+        <h2 class="info-header">Some random information.</h2>
+        <div id="info-container">
+            <div class="info-card">
+                <img class="info-image" src="" alt="Info Image">
+                <p class="info-subtext">Some example info subtext under the image.</p>
+            </div>
+            <div class="info-card">
+                <img class="info-image" src="" alt="Info Image">
+                <p class="info-subtext">Some example info subtext under the image.</p>
+            </div>
+            <div class="info-card">
+                <img class="info-image" src="" alt="Info Image">
+                <p class="info-subtext">Some example info subtext under the image.</p>
+            </div>
+            <div class="info-card">
+                <img class="info-image" src="" alt="Info Image">
+                <p class="info-subtext">Some example info subtext under the image.</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
