Add quote section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             </div>
         </div>
     </div>
+    <div class="quote">
+        <p class="quote-text">
+            This is an inspiring quote.
+        </p>
+        <strong class="quote-author">
+            -Author, Title
+        </strong>
+    </div>
 </body>
 
 </html>
