--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
             -Author, Title
         </strong>
     </div>
+    <div class="call-to-action">
+        <div id="call-to-action-container">
+            <strong class="call-to-action-title">Call to action!</strong>
+            <p class="call-to-action-subtext">Sign up for our product</p>
+        </div>
+        <button class="call-to-action-button">
+            Sign up
+        </button>
+    </div>
 </body>
 
 </html>
