Add footer section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             Sign up
         </button>
     </div>
+    <div class="footer">
+        <p class="footer-text">Copyright © Mahdi Shouib 2025</p>
+    </div>
 </body>
 
 </html>
