--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h3 class="header-logo">
                 Header Logo
             </h3>
-            <div>
+            <div class="link-container">
                 <a class="header-link" href="">Header link two</a>
                 <a class="header-link" href="">Header link one</a>
                 <a class="header-link" href="">Header link three</a>
