Add castle image to hero

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="header-subtext">Some example webpage subtext under the title.</p>
                 <button class="header-button">Sign Up</button>
             </div>
-            <img class="hero-image" src="" alt="Hero Image">
+            <img class="hero-image" src="images/castle.jpg" alt="Hero Image" height="350" width="550">
         </div>
     </div>
     <div class="info">
