Mod hero subtext

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="hero-bottom">
             <div id="hero-container">
                 <h1 class="header-title">This Website is Awesome!</h1>
-                <p class="header-subtext">Some example webpage subtext under the title.</p>
+                <p class="header-subtext">This website has some subtext that goes here under the main title, its a smaller text with lower contrast.</p>
                 <button class="header-button">Sign Up</button>
             </div>
             <img class="hero-image" src="images/castle.jpg" alt="Hero Image" height="350" width="550">
