Add images to info cards

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <h2 class="info-header">Some random information.</h2>
         <div id="info-container">
             <div class="info-card">
-                <img class="info-image" src="" alt="Info Image">
+                <img class="info-image" src="images/car.jpg" alt="Info Image" height="300" width="200">
                 <p class="info-subtext">Some example info subtext under the image.</p>
             </div>
             <div class="info-card">
-                <img class="info-image" src="" alt="Info Image">
+                <img class="info-image" src="images/city.jpg" alt="Info Image" height="300" width="200">
                 <p class="info-subtext">Some example info subtext under the image.</p>
             </div>
             <div class="info-card">
-                <img class="info-image" src="" alt="Info Image">
+                <img class="info-image" src="images/fall.jpg" alt="Info Image" height="300" width="200">
                 <p class="info-subtext">Some example info subtext under the image.</p>
             </div>
             <div class="info-card">
-                <img class="info-image" src="" alt="Info Image">
+                <img class="info-image" src="images/flower.jpg" alt="Info Image" height="300" width="200">
                 <p class="info-subtext">Some example info subtext under the image.</p>
             </div>
         </div>
