Add quote and author

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     </div>
     <div class="quote">
         <p class="quote-text">
-            This is an inspiring quote.
+            “Be authentic. Be yourself, and work at places that really welcome who you are. You’ll get up every single morning passionately committed to making a difference. Leave your fingerprints. Really think about … what’s the impact that I had because of this job?”
         </p>
         <strong class="quote-author">
-            -Author, Title
+            -Karen Lynch, CEO of CVS
         </strong>
     </div>
     <div class="call-to-action">
