--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="call-to-action">
         <div id="call-to-action-container">
             <strong class="call-to-action-title">Call to action!</strong>
-            <p class="call-to-action-subtext">Sign up for our product</p>
+            <p class="call-to-action-subtext">Sign up for our product by clicking that button right over there!</p>
         </div>
         <button class="call-to-action-button">
             Sign up
