Fix links order and spelling

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 Header Logo
             </h3>
             <div class="link-container">
-                <a class="header-link" href="">Header link two</a>
-                <a class="header-link" href="">Header link one</a>
-                <a class="header-link" href="">Header link three</a>
+                <a class="header-link" href="">Header Link One</a>
+                <a class="header-link" href="">Header Link Two</a>
+                <a class="header-link" href="">Header Link Three</a>
             </div>
         </div>
         <div class="hero-bottom">
